--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<script src="src/main.js"></script>
 		
 		<script src="src/terrain.js"></script>
-		<script src="src/char.js"></script>
+		<script src="src/cha.js"></script>
 	</head>
 	<body>
 	</body>
