--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		
 		<script src="src/terrain.js"></script>
 		<script src="src/cha.js"></script>
+		<script src="src/hud.js"></script>
 	</head>
 	<body>
 	</body>
