--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <script src="src/drawBody.js"></script>
 		<script src="src/main.js"></script>
 		
+		<script src="src/camera.js"></script>
 		<script src="src/terrain.js"></script>
 		<script src="src/cha.js"></script>
 		<script src="src/hud.js"></script>
