--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <script src="src/svgParser.js"></script>
         <script src="src/drawBody.js"></script>
 		<script src="src/main.js"></script>
-		
+		<script src="src/enemy.js"></script>
+
 		<script src="src/camera.js"></script>
 		<script src="src/terrain.js"></script>
 		<script src="src/cha.js"></script>
