--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<script src="src/main.js"></script>
 		<script src="src/enemy.js"></script>
 
-		<script src="src/camera.js"></script>
+		<script src="src/parallax.js"></script>
 		<script src="src/terrain.js"></script>
 		<script src="src/cha.js"></script>
 		<script src="src/hud.js"></script>
