--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <script src="src/drawBody.js"></script>
 		<script src="src/main.js"></script>
 		<script src="src/enemy.js"></script>
+		<script src="src/troyanpike.js"></script>
 
 		<script src="src/parallax.js"></script>
 		<script src="src/terrain.js"></script>
