--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<script src="src/main.js"></script>
 		<script src="src/enemy.js"></script>
 		<script src="src/troyanpike.js"></script>
+		<script src="src/troyanroll.js"></script>
 		<script src="src/cha_anim.js"></script>
 
 		<script src="src/parallax.js"></script>
