--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<script src="src/troyanroll.js"></script>
 		<script src="src/troyanboss.js"></script>
 		<script src="src/cha_anim.js"></script>
+		<script src="src/rails.js"></script>
 
 		<script src="src/parallax.js"></script>
 		<script src="src/terrain.js"></script>
